--- a/series.conf
+++ b/series.conf
@@ -23146,6 +23146,7 @@
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
 	patches.suse/sctp-leave-the-err-path-free-in-sctp_stream_init-to-.patch
 	patches.suse/dm-raid-fix-address-sanitizer-warning-in-raid_resume.patch
+	patches.suse/selinux-Add-boundary-check-in-put_entry.patch
 	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
 	patches.suse/wifi-mac80211-refactor-elements-parsing-with-paramet.patch
 	patches.suse/i2c-fix-a-potential-use-after-free.patch
