--- a/series.conf
+++ b/series.conf
@@ -32293,6 +32293,7 @@
 	patches.suse/can-bcm-add-missing-rcu-read-protection-for-procfs-c.patch
 	patches.suse/ice-fix-vf-num_mac-count-with-port-representors.patch
 	patches.suse/ice-Fix-LACP-bonds-without-SRIOV-environment.patch
+	patches.suse/idpf-fix-null-ptr-deref-in-idpf_features_check.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/espintcp-fix-skb-leaks.patch
 	patches.suse/can-slcan-allow-reception-of-short-error-messages.patch
