--- a/series.conf
+++ b/series.conf
@@ -23898,6 +23898,7 @@
 	patches.suse/mptcp-fix-NULL-pointer-in-can_accept_new_subflow.patch
 	patches.suse/net-fix-geneve_opt-length-integer-overflow.patch
 	patches.suse/netfilter-nft_tunnel-fix-geneve_opt-type-confusion-additio.patch
+	patches.suse/KVM-x86-Acquire-SRCU-in-KVM_GET_MP_STATE-to-protect-guest-.patch
 	patches.suse/sch_htb-make-htb_qlen_notify-idempotent.patch
 	patches.suse/sch_drr-make-drr_qlen_notify-idempotent.patch
 	patches.suse/sch_hfsc-make-hfsc_qlen_notify-idempotent.patch
