--- a/series.conf
+++ b/series.conf
@@ -31422,6 +31422,7 @@
 	patches.suse/ieee802154-ca8210-Use-proper-setters-and-getters-for.patch
 	patches.suse/igb-reject-invalid-external-timestamp-requests-for-8.patch
 	patches.suse/broadcom-fix-supported-flag-check-in-periodic-output.patch
+	patches.suse/net-vlan-don-t-propagate-flags-on-open.patch
 	patches.suse/wifi-ath11k-fix-memory-leak-in-ath11k_xxx_remove.patch
 	patches.suse/wifi-ath12k-encode-max-Tx-power-in-scan-channel-list.patch
 	patches.suse/wifi-ath12k-Fix-invalid-entry-fetch-in-ath12k_dp_mon.patch
