--- a/series.conf
+++ b/series.conf
@@ -32289,6 +32289,7 @@
 	patches.suse/can-bcm-add-locking-for-bcm_op-runtime-updates.patch
 	patches.suse/can-bcm-add-missing-rcu-read-protection-for-procfs-c.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
+	patches.suse/net-tipc-fix-slab-use-after-free-Read-in-tipc_aead_encrypt.patch
 	patches.suse/espintcp-fix-skb-leaks.patch
 	patches.suse/can-slcan-allow-reception-of-short-error-messages.patch
 	patches.suse/loop-don-t-require-write_iter-for-writable-files-in-loop_c.patch
