--- a/series.conf
+++ b/series.conf
@@ -32095,6 +32095,7 @@
 	patches.suse/wifi-plfxlc-Remove-erroneous-assert-in-plfxlc_mac_re.patch
 	patches.suse/wifi-brcm80211-fmac-Add-error-handling-for-brcmf_usb.patch
 	patches.suse/vxlan-vnifilter-Fix-unlocked-deletion-of-default-FDB.patch
+	patches.suse/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
 	patches.suse/net-mlx5-E-Switch-Initialize-MAC-Address-for-Default.patch
 	patches.suse/net-mlx5-E-switch-Fix-error-handling-for-enabling-ro.patch
 	patches.suse/vmxnet3-Fix-malformed-packet-sizing-in-vmxnet3_proce.patch
