--- a/series.conf
+++ b/series.conf
@@ -33368,6 +33368,7 @@
 	patches.kabi/ucsi_debugfs_entry-hide-signedness-change.patch
 	patches.kabi/truct-dwc3-hide-new-member-wakeup_pending_funcs.patch
 	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
+	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
