--- a/series.conf
+++ b/series.conf
@@ -59172,6 +59172,7 @@
 	patches.suse/drm-amd-display-Stop-amdgpu_dm-initialize-when-link-.patch
 	patches.suse/drm-amd-display-Check-msg_id-before-processing-trans.patch
 	patches.suse/drm-amd-display-Check-link_index-before-accessing-dc.patch
+	patches.suse/netfilter-nf_set_pipapo-fix-initial-map-fill.patch
 	patches.suse/powerpc-rtas-Prevent-Spectre-v1-gadget-construction-.patch
 	patches.suse/tap-add-missing-verification-for-short-frame.patch
 	patches.suse/net-iucv-fix-use-after-free-in-iucv_sock_close.patch
