--- a/series.conf
+++ b/series.conf
@@ -8293,6 +8293,7 @@
 	patches.suse/net-txgbe-fix-memory-leak-in-txgbe_probe-error-path.patch
 	patches.suse/net-dsa-mv88e6xxx-avoid-unregistering-devlink-region.patch
 	patches.suse/net-dsa-mv88e6xxx-fix-ENOENT-when-deleting-VLANs-and.patch
+	patches.suse/net-dsa-clean-up-FDB-MDB-VLAN-entries-on-unbind.patch
 	patches.suse/net-dsa-free-routing-table-on-probe-failure.patch
 	patches.suse/ptp-ocp-fix-start-time-alignment-in-ptp_ocp_signal_s.patch
 	patches.suse/Bluetooth-l2cap-Process-valid-commands-in-too-long-f.patch
