--- a/series.conf
+++ b/series.conf
@@ -23658,6 +23658,7 @@
 	patches.suse/net-sched-fix-use-after-free-in-taprio_change.patch
 	patches.suse/Bluetooth-SCO-Fix-UAF-on-sco_sock_timeout.patch
 	patches.suse/ALSA-firewire-lib-Avoid-division-by-zero-in-apply_constraint_to_size.patch
+	patches.suse/net-sched-stop-qdisc_tree_reduce_backlog-on-TC_H_ROOT.patch
 	patches.suse/HID-core-zero-initialize-the-report-buffer.patch
 	patches.suse/dm-cache-fix-out-of-bounds-access-to-the-dirty-bitset-when-resizing.patch
 	patches.suse/security-keys-fix-slab-out-of-bounds-in-key_task_per.patch
