--- a/series.conf
+++ b/series.conf
@@ -7793,6 +7793,7 @@
 	patches.suse/thermal-drivers-mediatek-lvts-Disable-monitor-mode-d.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Disable-Stage-3-therma.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Start-sensor-interrupt.patch
+	patches.suse/virtio-break-and-reset-virtio-devices-on-device_shut.patch
 	patches.suse/tools-virtio-linux-module.h-add-MODULE_DESCRIPTION-d.patch
 	patches.suse/vhost-scsi-Fix-handling-of-multiple-calls-to-vhost_s.patch
 	patches.suse/vdpa-mlx5-Fix-oversized-null-mkey-longer-than-32bit.patch
