--- a/series.conf
+++ b/series.conf
@@ -31009,6 +31009,7 @@
 	patches.suse/drm-amd-display-Fix-HPD-after-gpu-reset.patch
 	patches.suse/drm-vkms-Round-fixp2int-conversion-in-lerp_u16.patch
 	patches.suse/drm-nouveau-Do-not-override-forced-connector-status.patch
+	patches.suse/efi-Don-t-map-the-entire-mokvar-table-to-determine-i.patch
 	patches.suse/block-fix-kmem_cache-of-name-bio-108-already-exists.patch
 	patches.suse/iommu-vt-d-Fix-suspicious-RCU-usage.patch
 	patches.suse/tracing-Fix-bad-hist-from-corrupting-named_triggers-list.patch
