--- a/series.conf
+++ b/series.conf
@@ -16233,6 +16233,7 @@
 	patches.suse/wifi-cfg80211-debugfs-fix-return-type-in-ht40allow_m.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
 	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
+	patches.suse/Bluetooth-hci_event-Fix-checking-conn-for-le_conn_co.patch
 	patches.suse/net-sched-fix-netdevice-reference-leaks-in-attach_de.patch
 	patches.suse/ieee802154-adf7242-defer-destroy_workqueue-call.patch
 	patches.suse/ieee802154-cc2520-add-rc-code-in-cc2520_tx.patch
