--- a/series.conf
+++ b/series.conf
@@ -32509,6 +32509,7 @@
 	patches.suse/nfsd-Initialize-ssc-before-laundromat_work-to-prevent-NULL-dereference.patch
 	patches.suse/dlm-mask-sk_shutdown-value.patch
 	patches.suse/dlm-use-SHUT_RDWR-for-SCTP-shutdown.patch
+	patches.suse/jfs-fix-array-index-out-of-bounds-read-in-add_missing_indices.patch
 	patches.suse/firmware-SDEI-Allow-sdei-initialization-without-ACPI.patch
 	patches.suse/firmware-psci-Fix-refcount-leak-in-psci_dt_init.patch
 	patches.suse/usbnet-asix-AX88772-leave-the-carrier-control-to-phy.patch
