--- a/series.conf
+++ b/series.conf
@@ -31507,6 +31507,7 @@
 	patches.suse/Bluetooth-hci_uart-Fix-another-race-during-initializ.patch
 	patches.suse/Bluetooth-Add-quirk-for-broken-READ_VOICE_SETTING.patch
 	patches.suse/Bluetooth-Add-quirk-for-broken-READ_PAGE_SCAN_TYPE.patch
+	patches.suse/Bluetooth-Disable-SCO-support-if-READ_VOICE_SETTING-.patch
 	patches.suse/Bluetooth-HCI-Add-definition-of-hci_rp_remote_name_r.patch
 	patches.suse/Bluetooth-btnxpuart-Fix-kernel-panic-during-FW-relea.patch
 	patches.suse/net-Remove-RTNL-dance-for-SIOCBRADDIF-and-SIOCBRDELIF.patch
