--- a/series.conf
+++ b/series.conf
@@ -32925,6 +32925,7 @@
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
+	patches.suse/x86-process-Move-the-buffer-clearing-before-MONITOR.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
