--- a/blacklist.conf
+++ b/blacklist.conf
@@ -958,3 +958,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 22bbc1dcd0d6785fb390c41f0dd5b5e218d23bdd # cleanup that can break compilation
 791a9ed0a40dfa70fe793dcecf950273255cbb84 # cleanup, not a fix
 46fee9e38995af9ae16a8cc7d05031486d44cf35 # cleanup, not a fix
+c7f50d0433a016d43681592836a3d484817bfb34 # CVE-2025-38096 https://bugzilla.suse.com/show_bug.cgi?id=1245657#c1
