--- a/series.conf
+++ b/series.conf
@@ -8895,6 +8895,7 @@
 	patches.suse/PCI-Add-Intel-Wildcat-Lake-audio-Device-ID.patch
 	patches.suse/ALSA-hda-add-HDMI-codec-ID-for-Intel-WCL.patch
 	patches.suse/ALSA-hda-hda-intel-add-Wildcat-Lake-support.patch
+	patches.suse/ALSA-usb-audio-Kill-timer-properly-at-removal.patch
 	patches.suse/ASoC-codec-wcd9335-Convert-to-GPIO-descriptors.patch
 	patches.suse/ASoC-tas2770-Power-cycle-amp-on-ISENSE-VSENSE-change.patch
 	patches.suse/ASoC-tas2764-Reinit-cache-on-part-reset.patch
