--- a/series.conf
+++ b/series.conf
@@ -23728,6 +23728,7 @@
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
+	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 
 	########################################################
 	# end of sorted patches
