--- a/series.conf
+++ b/series.conf
@@ -23926,6 +23926,7 @@
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
+	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 
 	########################################################
 	# end of sorted patches
