--- a/series.conf
+++ b/series.conf
@@ -9597,6 +9597,7 @@
 	patches.suse/pinctrl-qcom-pinctrl-qcm2290-Add-missing-pins.patch
 	patches.suse/pinctrl-st-Drop-unused-st_gpio_bank-function.patch
 	patches.suse/ptp-remove-ptp-n_vclocks-check-logic-in-ptp_vclock_i.patch
+	patches.suse/net_sched-sch_sfq-fix-a-potential-crash-on-gso_skb-handlin.patch
 	patches.suse/Bluetooth-hci_core-fix-list_for_each_entry_rcu-usage.patch
 	patches.suse/Bluetooth-btintel_pcie-Fix-driver-not-posting-maximu.patch
 	patches.suse/Bluetooth-btintel_pcie-Increase-the-tx-and-rx-descri.patch
