--- a/series.conf
+++ b/series.conf
@@ -9675,6 +9675,7 @@
 	patches.suse/net-ice-Perform-accurate-aRFS-flow-match.patch
 	patches.suse/ice-fix-eswitch-code-memory-leak-in-reset-scenario.patch
 	patches.suse/e1000e-set-fixed-clock-frequency-indication-for-Nahu.patch
+	patches.suse/net-lan743x-fix-potential-out-of-bounds-write-in-lan743x_p.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
