--- a/series.conf
+++ b/series.conf
@@ -10240,6 +10240,7 @@
 	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 
 	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
+	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
 
 	########################################################
 	# preempt-rt backport converged
