--- a/series.conf
+++ b/series.conf
@@ -8749,6 +8749,7 @@
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/net-tipc-fix-slab-use-after-free-Read-in-tipc_aead_encrypt.patch
 	patches.suse/espintcp-fix-skb-leaks.patch
+	patches.suse/espintcp-remove-encap-socket-caching-to-avoid-refere.patch
 	patches.suse/xfrm-Fix-UDP-GRO-handling-for-some-corner-cases.patch
 	patches.suse/can-kvaser_pciefd-Fix-echo_skb-race.patch
 	patches.suse/can-kvaser_pciefd-Continue-parsing-DMA-buf-after-dro.patch
