--- a/series.conf
+++ b/series.conf
@@ -33499,6 +33499,7 @@
 	patches.kabi/kabi-restore-layout-of-struct-cgroup_subsys.patch
 	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
 	patches.kabi/struct-cdns-move-new-member-to-the-end.patch
+	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
