--- a/series.conf
+++ b/series.conf
@@ -53887,6 +53887,7 @@
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
+	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 
 	########################################################
 	# end of sorted patches
