--- a/series.conf
+++ b/series.conf
@@ -9539,6 +9539,7 @@
 	patches.suse/iio-adc-mcp3911-fix-device-dependent-mappings-for-co.patch
 	patches.suse/iio-adc-ti-ads1298-Kconfig-add-kfifo-dependency-to-f.patch
 	patches.suse/coresight-holding-cscfg_csdev_lock-while-removing-cs.patch
+	patches.suse/coresight-prevent-deactivate-active-config-while-ena.patch
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
 	patches.suse/8250-microchip-pci1xxxx-Add-PCIe-Hot-reset-disable-s.patch
 	patches.suse/serial-jsm-fix-NPE-during-jsm_uart_port_init.patch
