--- a/series.conf
+++ b/series.conf
@@ -32732,6 +32732,7 @@
 	patches.suse/iio-adc-ad_sigma_delta-Fix-use-of-uninitialized-stat.patch
 	patches.suse/iio-pressure-zpa2326-Use-aligned_s64-for-the-timesta.patch
 	patches.suse/staging-iio-ad5933-Correct-settling-cycles-encoding-.patch
+	patches.suse/coresight-holding-cscfg_csdev_lock-while-removing-cs.patch
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
