--- a/series.conf
+++ b/series.conf
@@ -9425,6 +9425,7 @@
 	patches.suse/dm-free-table-mempools-if-not-used-in-__bind.patch
 	patches.suse/dm-handle-failures-in-dm_table_set_restrictions.patch
 	patches.suse/dm-fix-dm_blk_report_zones.patch
+	patches.suse/dm-limit-swapping-tables-for-devices-with-zone-write.patch
 	patches.suse/dm-lock-limits-when-reading-them.patch
 	patches.suse/dm-flakey-error-all-IOs-when-num_features-is-absent.patch
 	patches.suse/dm-flakey-make-corrupting-read-bios-work.patch
