--- a/series.conf
+++ b/series.conf
@@ -10270,6 +10270,7 @@
 
 	patches.kabi/xsk-Fix-race-condition-in-AF_XDP-generic-RX-path.patch
 	patches.kabi/kabi-restore-encap_sk-in-struct-xfrm_state.patch
+	patches.suse/kabi-fix-dm-fix-dm_blk_report_zones.patch
 
 	########################################################
 	# preempt-rt backport converged
