--- a/series.conf
+++ b/series.conf
@@ -9822,6 +9822,7 @@
 	patches.suse/i2c-designware-Fix-an-initialization-issue.patch
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
+	patches.suse/x86-microcode-AMD-Add-TSA-microcode-SHAs.patch
 	patches.suse/ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus--ce174b4.patch
 	patches.suse/ALSA-usb-audio-Improve-filtering-of-sample-rates-on-.patch
