--- a/series.conf
+++ b/series.conf
@@ -23923,6 +23923,7 @@
 	patches.suse/crypto-algif_hash-fix-double-free-in-hash_accept.patch
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
+	patches.suse/i40e-fix-MMIO-write-access-to-an-invalid-page-in-i40.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
