--- a/blacklist.conf
+++ b/blacklist.conf
@@ -404,3 +404,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 7129ea6e242b00938532537da41ddf5fa3e21471 # rust
 975776841e689dd8ba36df9fa72ac3eca3c2957a # only for CONFIG_SMP=n
 f9af88a3d384c8b55beb5dc5483e5da0135fadbd # kABI breakage
+a018d1cf990d0c339fe0e29b762ea5dc10567d67 # CVE-2025-37857 https://bugzilla.suse.com/show_bug.cgi?id=1243067#c3
