--- a/series.conf
+++ b/series.conf
@@ -32591,6 +32591,7 @@
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/software-node-Correct-a-OOB-check-in-software_node_g.patch
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
+	patches.suse/configfs-tsm-report-Fix-NULL-dereference-of-tsm_ops.patch
 	patches.suse/hisi_acc_vfio_pci-fix-XQE-dma-address-error.patch
 	patches.suse/scsi-lpfc-Use-memcpy-for-BIOS-version.patch
 	patches.suse/scsi-hisi_sas-Call-I_T_nexus-after-soft-reset-for-SATA-dis.patch
