--- a/series.conf
+++ b/series.conf
@@ -32593,6 +32593,7 @@
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
 	patches.suse/configfs-tsm-report-Fix-NULL-dereference-of-tsm_ops.patch
 	patches.suse/hisi_acc_vfio_pci-fix-XQE-dma-address-error.patch
+	patches.suse/hisi_acc_vfio_pci-bugfix-live-migration-function-wit.patch
 	patches.suse/scsi-lpfc-Use-memcpy-for-BIOS-version.patch
 	patches.suse/scsi-hisi_sas-Call-I_T_nexus-after-soft-reset-for-SATA-dis.patch
 	patches.suse/scsi-qla2xxx-Remove-unused-qlt_free_qfull_cmds.patch
