--- a/series.conf
+++ b/series.conf
@@ -23930,6 +23930,7 @@
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
+	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 
 	########################################################
 	# end of sorted patches
