--- a/series.conf
+++ b/series.conf
@@ -52608,6 +52608,7 @@
 	patches.suse/ASoC-imx-card-Add-NULL-check-in-imx_card_probe.patch
 	patches.suse/x86-uaccess-Improve-performance-by-aligning-writes-to-8-by.patch
 	patches.suse/x86-mm-init-Handle-the-special-case-of-device-privat.patch
+	patches.suse/x86-fred-Fix-system-hang-during-S4-resume-with-FRED-enable.patch
 	patches.suse/platform-x86-ISST-Correct-command-storage-data-lengt.patch
 	patches.suse/spi-rockchip-Fix-register-out-of-bounds-access.patch
 	patches.suse/spi-fsl-qspi-use-devm-function-instead-of-driver-rem.patch
