--- a/series.conf
+++ b/series.conf
@@ -31623,6 +31623,7 @@
 	patches.suse/drm-amd-display-add-workaround-flag-to-link-to-force.patch
 	patches.suse/drm-amdgpu-Set-snoop-bit-for-SDMA-for-MI-series.patch
 	patches.suse/drm-amdgpu-umsch-declare-umsch-firmware.patch
+	patches.suse/0001-drm-amd-display-Don-t-treat-wb-connector-as-physical.patch
 	patches.suse/drm-amdgpu-Replace-Mutex-with-Spinlock-for-RLCG-regi.patch
 	patches.suse/drm-i915-dsi-Use-TRANS_DDI_FUNC_CTL-s-own-port-width.patch
 	patches.suse/drm-panel-ilitek-ili9882t-fix-GPIO-name-in-error-mes.patch
