--- a/series.conf
+++ b/series.conf
@@ -23732,6 +23732,7 @@
 	patches.suse/sch_hfsc-Fix-qlen-accounting-bug-when-using-peek-in-hfsc_e.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
+	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 
