--- a/series.conf
+++ b/series.conf
@@ -23925,6 +23925,7 @@
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
+	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
