--- a/series.conf
+++ b/series.conf
@@ -9196,6 +9196,7 @@
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
 	patches.suse/bpf-sockmap-Fix-data-lost-during-EAGAIN-retries.patch
 	patches.suse/bpf-sockmap-fix-duplicated-data-transmission.patch
+	patches.suse/bpf-sockmap-Fix-panic-when-calling-skb_linearize.patch
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-KeyID-man.patch
