--- a/series.conf
+++ b/series.conf
@@ -9194,6 +9194,7 @@
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/net-phy-mscc-Stop-clearing-the-the-UDPv4-checksum-fo.patch
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
+	patches.suse/bpf-sockmap-Fix-data-lost-during-EAGAIN-retries.patch
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-KeyID-man.patch
