--- a/series.conf
+++ b/series.conf
@@ -9200,6 +9200,7 @@
 	patches.suse/selftest-bpf-benchs-Add-benchmark-for-sockmap-usage.patch
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
+	patches.suse/bpf-sockmap-Avoid-using-sk_socket-after-free-when-se.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-KeyID-man.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-TD-creati.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-vCPU-crea.patch
