--- a/series.conf
+++ b/series.conf
@@ -32596,6 +32596,7 @@
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
 	patches.suse/bpf-sockmap-Fix-data-lost-during-EAGAIN-retries.patch
 	patches.suse/bpf-sockmap-fix-duplicated-data-transmission.patch
+	patches.suse/bpf-sockmap-Fix-panic-when-calling-skb_linearize.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/software-node-Correct-a-OOB-check-in-software_node_g.patch
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
