--- a/series.conf
+++ b/series.conf
@@ -32594,6 +32594,7 @@
 	patches.suse/net_sched-hfsc-Address-reentrant-enqueue-adding-clas.patch
 	patches.suse/net-phy-mscc-Stop-clearing-the-the-UDPv4-checksum-fo.patch
 	patches.suse/selftests-bpf-Fix-bpf_nf-selftest-failure.patch
+	patches.suse/bpf-sockmap-Fix-data-lost-during-EAGAIN-retries.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/software-node-Correct-a-OOB-check-in-software_node_g.patch
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
