--- a/series.conf
+++ b/series.conf
@@ -9201,6 +9201,7 @@
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/bpf-sockmap-Avoid-using-sk_socket-after-free-when-se.patch
+	patches.suse/bpf-Check-rcu_read_lock_trace_held-in-bpf_map_lookup.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-KeyID-man.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-TD-creati.patch
 	patches.suse/x86-virt-tdx-Add-SEAMCALL-wrappers-for-TDX-vCPU-crea.patch
