--- a/blacklist.conf
+++ b/blacklist.conf
@@ -960,3 +960,4 @@ c9b19ea63036fc537a69265acea1b18dabd1cbd3 # fix a warning if CONFIG_NEED_DMA_MAP_
 46fee9e38995af9ae16a8cc7d05031486d44cf35 # cleanup, not a fix
 c7f50d0433a016d43681592836a3d484817bfb34 # CVE-2025-38096 https://bugzilla.suse.com/show_bug.cgi?id=1245657#c1
 fd881d0a085fc54354414aed990ccf05f282ba53 # CVE-2025-38067 https://bugzilla.suse.com/show_bug.cgi?id=1245213#c2
+f6205f8215f12a96518ac9469ff76294ae7bd612 # CVE-2025-38037 https://bugzilla.suse.com/show_bug.cgi?id=1244803#c1
