--- a/series.conf
+++ b/series.conf
@@ -32729,6 +32729,7 @@
 	patches.suse/net-usb-aqc111-debug-info-before-sanitation.patch
 	patches.suse/Bluetooth-hci_qca-move-the-SoC-type-check-to-the-rig.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-responding-with-L2CAP_CR_LE_.patch
+	patches.suse/net-stmmac-make-sure-that-ptp_rate-is-not-0-before-configu.patch
 	patches.suse/net-fix-udp-gso-skb_segment-after-pull-from-frag_lis.patch
 	patches.suse/ice-fix-Tx-scheduler-error-handling-in-XDP-callback.patch
 	patches.suse/ice-create-new-Tx-scheduler-nodes-for-new-queues-onl.patch
