--- a/series.conf
+++ b/series.conf
@@ -9384,6 +9384,7 @@
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
 	patches.suse/platform-x86-amd-hsmp-fix-building-with-CONFIG_HWMON-m.patch
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
+	patches.suse/x86-sgx-Prevent-attempts-to-reclaim-poisoned-pages.patch
 	patches.suse/configfs-tsm-report-Fix-NULL-dereference-of-tsm_ops.patch
 	patches.suse/hisi_acc_vfio_pci-fix-XQE-dma-address-error.patch
 	patches.suse/hisi_acc_vfio_pci-bugfix-live-migration-function-wit.patch
