--- a/series.conf
+++ b/series.conf
@@ -23680,6 +23680,7 @@
 	patches.suse/sunrpc-fix-one-UAF-issue-caused-by-sunrpc-kernel-tcp-socke.patch
 	patches.suse/9p-xen-fix-release-of-IRQ.patch
 	patches.suse/tipc-Fix-use-after-free-of-kernel-socket-in-cleanup_.patch
+	patches.suse/net-sched-fix-ordering-of-qlen-adjustment.patch
 	patches.suse/0001-netfilter-x_tables-fix-LED-ID-check-in-led_tg_check.patch
 	patches.suse/scsi-qla2xxx-Fix-use-after-free-on-unload.patch
 	patches.suse/scsi-sg-Fix-slab-use-after-free-read-in-sg_release.patch
