--- a/series.conf
+++ b/series.conf
@@ -31587,6 +31587,7 @@
 	patches.suse/btrfs-always-fallback-to-buffered-write-if-the-inode.patch
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-du.patch
 	patches.suse/btrfs-fix-block-group-refcount-race-in-btrfs_create_.patch
+	patches.suse/btrfs-harden-block_group-bg_list-against-list_del-ra.patch
 	patches.suse/btrfs-simplify-condition-for-logging-new-dentries-at.patch
 	patches.suse/btrfs-remove-end_no_trans-label-from-btrfs_log_inode.patch
 	patches.suse/dlm-prevent-NPD-when-writing-a-positive-value-to-event_done.patch
