--- a/series.conf
+++ b/series.conf
@@ -32871,6 +32871,7 @@
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
 	patches.suse/drm-msm-Fix-a-fence-leak-in-submit-error-path.patch
 	patches.suse/drm-msm-Fix-another-leak-in-the-submit-error-path.patch
+	patches.suse/drm-msm-a7xx-Call-CP_RESET_CONTEXT_STATE.patch
 	patches.suse/drm-i915-pmu-Fix-build-error-with-GCOV-and-AutoFDO-e.patch
 	patches.suse/drm-amdgpu-switch-job-hw_fence-to-amdgpu_fence.patch
 	patches.suse/drm-amdkfd-Fix-race-in-GWS-queue-scheduling.patch
