--- a/series.conf
+++ b/series.conf
@@ -19341,6 +19341,7 @@
 	patches.suse/module-Don-t-wait-for-GOING-modules.patch
 	patches.suse/netlink-prevent-potential-spectre-v1-gadgets.patch
 	patches.suse/net-mana-Fix-IRQ-name-add-PCI-and-queue-number.patch
+	patches.suse/netfilter-nft_set_rbtree-Switch-to-node-list-walk-for-over.patch
 	patches.suse/netrom-Fix-use-after-free-of-a-listening-socket.patch
 	patches.suse/sctp-fail-if-no-bound-addresses-can-be-used-for-a-gi.patch
 	patches.suse/net-x25-Fix-to-not-accept-on-connected-socket.patch
