--- a/series.conf
+++ b/series.conf
@@ -22156,6 +22156,7 @@
 	patches.suse/i40e-Fix-an-NULL-vs-IS_ERR-bug-for-debugfs_create_di.patch
 	patches.suse/igc-Fix-Kernel-Panic-during-ndo_tx_timeout-callback.patch
 	patches.suse/virtio-net-fix-race-between-set-queues-and-probe.patch
+	patches.suse/netfilter-nft_set_rbtree-fix-overlap-expiration-walk.patch
 	patches.suse/netfilter-nf_tables-skip-immediate-deactivate-in-_PR.patch
 	patches.suse/netfilter-nf_tables-disallow-rule-addition-to-bound-.patch
 	patches.suse/drm-msm-dpu-drop-enum-dpu_core_perf_data_bus_id.patch
