--- a/series.conf
+++ b/series.conf
@@ -22398,6 +22398,7 @@
 	patches.suse/batman-adv-Hold-rtnl-lock-during-MTU-update-via-netl.patch
 	patches.suse/netfilter-nf_tables-GC-transaction-race-with-abort-p.patch
 	patches.suse/netfilter-nf_tables-use-correct-lock-to-protect-gc_l.patch
+	patches.suse/netfilter-nf_tables-defer-gc-run-if-previous-batch-is-stil.patch
 	patches.suse/nfsd-Fix-race-to-FREE_STATEID-and-cl_revoked.patch
 	patches.suse/tracing-Fix-cpu-buffers-unavailable-due-to-record_disabled-missed.patch
 	patches.suse/tracing-Fix-memleak-due-to-race-between-current_tracer-and-trace.patch
