--- a/series.conf
+++ b/series.conf
@@ -22765,6 +22765,7 @@
 	patches.suse/net-sched-sch_qfq-Fix-UAF-in-qfq_dequeue.patch
 	patches.suse/netfilter-nftables-exthdr-fix-4-byte-stack-OOB-write.patch
 	patches.suse/0001-netfilter-nfnetlink_osf-avoid-OOB-read.patch
+	patches.suse/netfilter-nft_set_rbtree-skip-sync-GC-for-new-elements-in-.patch
 	patches.suse/netfilter-ipset-add-the-missing-IP_SET_HASH_WITH_NET.patch
 	patches.suse/drm-i915-mark-requests-for-GuC-virtual-engines-to-av.patch
 	patches.suse/drm-amd-display-prevent-potential-division-by-zero-e.patch
