--- a/series.conf
+++ b/series.conf
@@ -24481,6 +24481,7 @@
 	patches.suse/mmc-sdhci-msm-pervent-access-to-suspended-controller.patch
 	patches.suse/0001-mm-hugetlb-fix-missing-hugetlb_lock-for-resv-uncharg.patch
 	patches.suse/stackdepot-respect-__GFP_NOLOCKDEP-allocation-flag.patch
+	patches.suse/mm-hugetlb-fix-DEBUG_LOCKS_WARN_ON-1-when-dissolve_f.patch
 	patches.suse/arm64-dts-rockchip-set-PHY-address-of-MT7531-switch-to-0x1f.patch
 	patches.suse/arm64-dts-rockchip-enable-internal-pull-up-for-Q7_THRM-on-RK3399-Puma.patch
 	patches.suse/arm64-dts-rockchip-fix-alphabetical-ordering-RK3399-puma.patch
