--- a/series.conf
+++ b/series.conf
@@ -27720,6 +27720,7 @@
 	patches.suse/net-ipv6-ioam6-new-feature-tunsrc.patch
 	patches.suse/ipv4-icmp-Pass-full-DS-field-to-ip_route_input.patch
 	patches.suse/neighbour-delete-redundant-judgment-statements.patch
+	patches.suse/selftests-bpf-Support-more-socket-types-in-create_pa.patch
 	patches.suse/netpoll-Ensure-clean-state-on-setup-failures.patch
 	patches.suse/tcp-avoid-reusing-FIN_WAIT2-when-trying-to-find-port-in-connect-process.patch
 	patches.suse/net-mana-Implement-get_ringparam-set_ringparam-for-m.patch
