--- a/series.conf
+++ b/series.conf
@@ -23860,6 +23860,7 @@
 	patches.suse/can-j1939-j1939_session_new-fix-skb-reference-counti.patch
 	patches.suse/tipc-Fix-use-after-free-of-kernel-socket-in-cleanup_.patch
 	patches.suse/0001-netfilter-x_tables-fix-LED-ID-check-in-led_tg_check.patch
+	patches.suse/netfilter-nft_set_hash-skip-duplicated-elements-pending-gc.patch
 	patches.suse/drm-dp_mst-Ensure-mst_primary-pointer-is-valid-in-dr.patch
 	patches.suse/scsi-qla2xxx-Fix-use-after-free-on-unload.patch
 	patches.suse/scsi-sg-Fix-slab-use-after-free-read-in-sg_release.patch
