--- a/series.conf
+++ b/series.conf
@@ -9877,6 +9877,7 @@
 	patches.suse/net-usb-qmi_wwan-add-SIMCom-8230C-composition.patch
 	patches.suse/Bluetooth-L2CAP-Fix-L2CAP-MTU-negotiation.patch
 	patches.suse/driver-bluetooth-hci_qca-fix-unable-to-load-the-BT-d.patch
+	patches.suse/Bluetooth-hci_core-Fix-use-after-free-in-vhci_flush.patch
 	patches.suse/bnxt-properly-flush-XDP-redirect-lists.patch
 	patches.suse/wifi-mac80211-fix-beacon-interval-calculation-overfl.patch
 	patches.suse/wifi-mac80211-finish-link-init-before-RCU-publish.patch
