--- a/series.conf
+++ b/series.conf
@@ -10563,6 +10563,7 @@
 	patches.suse/kabi-fix-dm-fix-dm_blk_report_zones.patch
 	patches.kabi/bpf-Do-not-include-stack-ptr-register-in-precision-b.patch
 	patches.kabi/drm_framebuffer-kabi-workaround.patch
+	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
 
 	########################################################
 	# preempt-rt backport converged
