--- a/series.conf
+++ b/series.conf
@@ -23690,6 +23690,7 @@
 	patches.suse/9p-xen-fix-release-of-IRQ.patch
 	patches.suse/tipc-Fix-use-after-free-of-kernel-socket-in-cleanup_.patch
 	patches.suse/0001-netfilter-x_tables-fix-LED-ID-check-in-led_tg_check.patch
+	patches.suse/netfilter-nft_set_hash-skip-duplicated-elements-pending-gc.patch
 	patches.suse/scsi-qla2xxx-Fix-use-after-free-on-unload.patch
 	patches.suse/scsi-sg-Fix-slab-use-after-free-read-in-sg_release.patch
 	patches.suse/tipc-fix-NULL-deref-in-cleanup_bearer.patch
