--- a/series.conf
+++ b/series.conf
@@ -23885,6 +23885,7 @@
 	patches.suse/power-supply-gpio-charger-Fix-set-charge-current-lim.patch
 	patches.suse/btrfs-fix-use-after-free-when-COWing-tree-bock-and-t.patch
 	patches.suse/ALSA-seq-oss-Fix-races-at-processing-SysEx-messages.patch
+	patches.suse/netfilter-nft_set_hash-unaligned-atomic-read-on-struct-nft.patch
 	patches.suse/mac802154-check-local-interfaces-before-deleting-sda.patch
 	patches.suse/x86-static-call-Remove-early_boot_irqs_disabled-chec.patch
 	patches.suse/mm-zswap-properly-synchronize-freeing-resources-duri.patch
