--- a/series.conf
+++ b/series.conf
@@ -23701,6 +23701,7 @@
 	patches.suse/net-smc-check-return-value-of-sock_recvmsg-when-drai.patch
 	patches.suse/btrfs-fix-use-after-free-when-COWing-tree-bock-and-t.patch
 	patches.suse/ALSA-seq-oss-Fix-races-at-processing-SysEx-messages.patch
+	patches.suse/netfilter-nft_set_hash-unaligned-atomic-read-on-struct-nft.patch
 	patches.suse/gfs2-Truncate-address-space-when-flipping-GFS2_DIF_JDATA-flag.patch
 	patches.suse/net_sched-sch_sfq-don-t-allow-1-packet-limit.patch
 	patches.suse/wifi-brcmsmac-add-gain-range-check-to-wlc_phy_iqcal_.patch
