--- a/series.conf
+++ b/series.conf
@@ -9631,6 +9631,7 @@
 	patches.suse/iavf-iavf_suspend-take-RTNL-before-netdev_lock.patch
 	patches.suse/iavf-centralize-watchdog-requeueing-itself.patch
 	patches.suse/iavf-simplify-watchdog_task-in-terms-of-adminq-task-.patch
+	patches.suse/iavf-extract-iavf_watchdog_step-out-of-iavf_watchdog.patch
 	patches.suse/seg6-Fix-validation-of-nexthop-addresses.patch
 	patches.suse/calipso-unlock-rcu-before-returning-EAFNOSUPPORT.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
