--- a/series.conf
+++ b/series.conf
@@ -9629,6 +9629,7 @@
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
 	patches.suse/wifi-cfg80211-mac80211-correctly-parse-S1G-beacon-op.patch
 	patches.suse/iavf-iavf_suspend-take-RTNL-before-netdev_lock.patch
+	patches.suse/iavf-centralize-watchdog-requeueing-itself.patch
 	patches.suse/seg6-Fix-validation-of-nexthop-addresses.patch
 	patches.suse/calipso-unlock-rcu-before-returning-EAFNOSUPPORT.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
