--- a/series.conf
+++ b/series.conf
@@ -32708,6 +32708,7 @@
 	patches.suse/mtd-nand-ecc-mxic-Fix-use-of-uninitialized-variable-.patch
 	patches.suse/mtd-nand-sunxi-Add-randomizer-configuration-before-r.patch
 	patches.suse/mtd-rawnand-sunxi-Add-randomizer-configuration-in-su.patch
+	patches.suse/Input-gpio-keys-fix-a-sleep-while-atomic-with-PREEMP.patch
 	patches.suse/Input-gpio-keys-fix-possible-concurrent-access-in-gp.patch
 	patches.suse/Input-ims-pcu-check-record-size-in-ims_pcu_flash_fir.patch
 	patches.suse/hwmon-pmbus-max34440-Fix-support-for-max34451.patch
